objects/GRP_CC_ChainAccount__c.object
<CustomObject>
    <description>GRP_CC Connected Customer Application Object</description>
    <fields>
        <fullName>GRP_CC_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GRP_CC_BarNb__c</fullName>
        <label>Bar Nb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CC_ChainAccountResponsible__c</fullName>
        <inlineHelpText>This is the email that will be used as login in the portal to grant access to the chain account responsible</inlineHelpText>
        <label>Chain Account Responsible Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Chain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Chain</label>
        <referenceTo>GRP_CC_Chain__c</referenceTo>
        <relationshipLabel>Chain Accounts</relationshipLabel>
        <relationshipName>ChainAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pernod Ricard entity in charge of the Chain Account</inlineHelpText>
        <label>PR Company</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The region of the company doesn&apos;t match the selected region.</errorMessage>
            <filterItems>
                <field>$Source.GRP_CC_Region__c</field>
                <operation>equals</operation>
                <valueField>CORE_Company__c.CORE_Country__r.CORE_Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.GRP_CC_Region__c</field>
                <operation>equals</operation>
                <value>&apos;&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CORE_Company__c</referenceTo>
        <relationshipLabel>Chain Accounts</relationshipLabel>
        <relationshipName>ChainAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The region of this country doesn&apos;t match the selected region.</errorMessage>
            <filterItems>
                <field>$Source.GRP_CC_Region__c</field>
                <operation>equals</operation>
                <valueField>CORE_Country__c.CORE_Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.GRP_CC_Region__c</field>
                <operation>equals</operation>
                <value>&apos;&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CORE_Country__c</referenceTo>
        <relationshipLabel>Chain Accounts</relationshipLabel>
        <relationshipName>ChainAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Domain__c</fullName>
        <description>Return the group domain&apos;s</description>
        <formula>GRP_CC_Chain__r.GRP_CC_Group__r.GRP_CC_Domain__c</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_EmailAdress__c</fullName>
        <inlineHelpText>Chain Account Generic Email Address</inlineHelpText>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_External_Venue_ID__c</fullName>
        <description>This field contains the reference used by the groups&apos; staff to uniquely identify their venues</description>
        <inlineHelpText>This field contains the reference used by the groups&apos; staff to uniquely identify their venues</inlineHelpText>
        <label>External Venue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_HotelType__c</fullName>
        <inlineHelpText>Please fill in only if outlet type is hotel</inlineHelpText>
        <label>Hotel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Leisure</fullName>
                </value>
                <value>
                    <fullName>Resort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRP_CC_Management_Type__c</fullName>
        <label>Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Franchised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRP_CC_OutletType__c</fullName>
        <label>Outlet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                    <default>true</default>
                    <label>Hotel</label>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Night-Club</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Membership Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRP_CC_PRResponsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the sales person managing Pernod Ricard relationship with this chain account</inlineHelpText>
        <label>PR Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChainAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_PR_Data_Entry_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, internal PR users are allowed to enter data in the name of the venue</inlineHelpText>
        <label>PR Data Entry Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GRP_CC_PR_Responsible_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the team leader managing the Pernod Ricard sales person in charge of this chain account</inlineHelpText>
        <label>PR Responsible&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chain_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>CORE_Region__c</referenceTo>
        <relationshipLabel>Chain Accounts</relationshipLabel>
        <relationshipName>ChainAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRP_CC_RestaurantNb__c</fullName>
        <label>Restaurant Nb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CC_RoomNb__c</fullName>
        <label>Room Nb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GRP_CC_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Chain Account</label>
    <listViews>
        <fullName>AC</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Autograph</value>
        </filters>
        <label>Autograph</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GRP_CC_PRResponsible__c</columns>
        <columns>GRP_CC_OutletType__c</columns>
        <columns>GRP_CC_Chain__c</columns>
        <columns>GRP_CC_Region__c</columns>
        <columns>GRP_CC_Country__c</columns>
        <columns>GRP_CC_City__c</columns>
        <columns>GRP_CC_External_Venue_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_with_line_managers</fullName>
        <columns>NAME</columns>
        <columns>GRP_CC_PR_Responsible_Manager__c</columns>
        <columns>GRP_CC_Country__c</columns>
        <columns>GRP_CC_PRResponsible__c</columns>
        <columns>GRP_CC_Chain__c</columns>
        <columns>GRP_CC_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with line managers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ana_Hotels_by_IHG</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ANA</value>
        </filters>
        <filters>
            <field>GRP_CC_Country__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Ana Hotels by IHG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bulgari_Hotels</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Bulgari</value>
        </filters>
        <label>Bulgari Hotels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Conrad_Hotels</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Conrad</value>
        </filters>
        <label>Conrad Hotels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Courtyard_by_Marriott</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Courtyard</value>
        </filters>
        <label>Courtyard by Marriott</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Crowne_Plaza</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Crowne Plaza</value>
        </filters>
        <label>Crowne Plaza</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DoubleTree</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DoubleTree</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DoubleTree</value>
        </filters>
        <label>DoubleTree by Hilton</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hilton_Garden_Inn</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Garden Inn</value>
        </filters>
        <label>Hilton Garden Inn</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hilton_Hotels</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Hilton</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>DoubleTree</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Garden Inn</value>
        </filters>
        <label>Hilton Hotels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Holiday_Inn</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Holiday Inn</value>
        </filters>
        <label>Holiday Inn</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Indigo_by_IHG</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Indigo</value>
        </filters>
        <label>Indigo by IHG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Intercontinental_Hotel</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>InterContinental</value>
        </filters>
        <label>Intercontinental Hotel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JW_Marriott</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>JW Marriott</value>
        </filters>
        <label>JW Marriott</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Chain Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chain Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>